Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 }
 body {
   overflow-x: hidden;
+  background-color: #191919 !important;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
